test/resources/typer/failing/MatchError2.scala
object MatchError2 {
  0 match {
      case 0 => "yay"
      case "1" => "wow"
      case _ => "woohoo"
  }
}
